# LegnaCode-cli

./: .gitignore  CHANGELOG.md  CHANGELOG.zh-CN.md  COMPARISON.md  COMPARISON.zh-CN.md  README.md  README.zh-CN.md  bunfig.toml  developer.en.md  developer.md  package.json
.github/workflows/: ebkrelease.yml  release.yml
.legna/.palace/: graph.json
extensions/legna-office/: esbuild.js  package-lock.json  package.json  tsconfig.json  xiaomi-open-plan.md
native/: Cargo.toml
native/grep/: Cargo.toml
native/sandbox/: package.json  sandbox.darwin-arm64.node
native/shell/: Cargo.toml
native/shell/src/: lib.rs
npm/: postinstall.cjs
runtime/: mac_helper.py  requirements-common.txt  requirements-macos.txt  requirements-windows.txt
scripts/: build-webui.ts  bump.ts  compile-all.ts  compile.ts  inline-webui.ts  publish.ts
src/: commands.ts  main.tsx  query.ts  tools.ts
src/buddy/: companion.ts
src/cli/: bg.ts
src/commands/: force-snip-impl.ts  force-snip.ts  statusline.tsx  undo.ts
src/components/: SandboxViolationExpandedView.tsx
src/constants/: prompts.ts
src/entrypoints/: cli.tsx
src/ink/: ink.tsx  log-update.ts
src/memdir/: memdir.ts  paths.ts
src/native/: grepBinding.ts  index.ts  shellBinding.ts
src/query/: stopHooks.ts
src/screens/: REPL.tsx
src/server/: admin-ui-html.ts  admin.ts
src/services/: modelManager.ts  modelRouter.ts  officeEmitter.ts  tokenEstimation.ts  undoTracker.ts
src/skills/: loadSkillsDir.ts
src/state/: AppStateStore.ts
src/tasks/: LocalMainSessionTask.ts  (+1 more)
webui/: package-lock.json  package.json
(+237 files in other folders)
